--- a/Weather-Backend-Demo/src/main/resources/application.yml
+++ b/Weather-Backend-Demo/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: Weather-Backend-Demo
+
+  feign:
+    urls:
+      weather-api: "https://api.openweathermap.org/data/2.5"
+
+weather:
+  api-key: ${WEATHER-API-KEY}
+  units: metric
+  lang: ru
