--- a/Weather-Backend-Demo/build.gradle
+++ b/Weather-Backend-Demo/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -45,6 +46,9 @@ dependencies {
     // Mapstruct
     implementation("org.mapstruct:mapstruct:1.5.5.Final")
     annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")
+
+    // Cache
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
     // Tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
