--- a/Weather-Backend-Demo/build.gradle
+++ b/Weather-Backend-Demo/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -49,6 +50,14 @@ dependencies {
 
     // Cache
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+
+    // Postgres
+    implementation("org.postgresql:postgresql")
+    runtimeOnly("org.postgresql:postgresql")
+
+    // Flyway
+    implementation("org.flywaydb:flyway-core")
+    implementation("org.flywaydb:flyway-database-postgresql")
 
     // Tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
