--- a/Weather-Backend-Demo/build.gradle
+++ b/Weather-Backend-Demo/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
