Added unit and integration tests

--- a/Weather-Backend-Demo/build.gradle
+++ b/Weather-Backend-Demo/build.gradle
@@ -61,8 +61,12 @@ dependencies {
     implementation("org.flywaydb:flyway-database-postgresql")
 
     // Tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("org.wiremock:wiremock-standalone:3.5.2")
+    testImplementation("com.h2database:h2:2.2.224")
+    testCompileOnly("org.projectlombok:lombok:1.18.30")
+    testAnnotationProcessor("org.projectlombok:lombok:1.18.30")
 }
 
 tasks.named('test') {
