--- a/Weather-Backend-Demo/build.gradle
+++ b/Weather-Backend-Demo/build.gradle
@@ -34,23 +34,24 @@ dependencyManagement {
 
 dependencies {
     // Spring
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
 
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly("org.projectlombok:lombok")
+    annotationProcessor("org.projectlombok:lombok")
 
     // Mapstruct
     implementation("org.mapstruct:mapstruct:1.5.5.Final")
     annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")
 
     // Cache
-    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
 
     // Postgres
     implementation("org.postgresql:postgresql")
